syntax = "proto3";

package scam;

option go_package = "./scampb";

message AddPhoneNumberRequest {
    string number = 1;
    string category_Code = 2;
    string category_Name = 3;
    repeated string BlockedANumbers = 4;
    repeated string BlockedCategories = 5;
    int32 score = 6;
}

message AddPhoneNumberResponse{
    bool success = 1;
}

message GetPhoneCategoryRequest {
    string PhoneNumber = 1;
}

message GetPhoneCategoryResponse {
    string CategoryCode = 1;
    string CategoryName = 2;
}

message GetPersonalBlocklistRequest {
    string PhoneNumber = 1;
}

message GetPersonalBlocklistResponse {
    repeated string BlockedANumbers = 1;
    repeated string BlockedCategories= 2 ;
}

message GetScoreRequest{
    string PhoneNumber = 1;
}

message GetScoreResponse{
    int32 Score = 1;
}

service ScamDatabase{
    rpc getPhoneCategory(GetPhoneCategoryRequest) returns (GetPhoneCategoryResponse);
    rpc GetPersonalBlocklist(GetPersonalBlocklistRequest)returns (GetPersonalBlocklistResponse);
    rpc AddPhoneNumber(AddPhoneNumberRequest) returns (AddPhoneNumberResponse);
    rpc GetScore(GetScoreRequest) returns (GetScoreResponse);
}